--- a/config/config.json
+++ b/config/config.json
@@ -2,7 +2,7 @@
   "development": {
     "username": "root",
     "password": null,
-    "database": "database_development",
+    "database": "db_tech-interview-1",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
